Bug 96275 - FILEOPEN RTF: Incorrect basic shape position
Summary: FILEOPEN RTF: Incorrect basic shape position
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: interoperability target:5.2.0 target:...
Keywords: filter:rtf
Depends on:
Blocks:
 
Reported: 2015-12-06 00:01 UTC by Ari Latvala
Modified: 2022-01-25 13:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
PDF version showing the expected layout (181.77 KB, application/pdf)
2015-12-06 00:01 UTC, Ari Latvala
Details
RTF version having problems (141.43 KB, application/rtf)
2015-12-06 00:01 UTC, Ari Latvala
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ari Latvala 2015-12-06 00:01:26 UTC
Created attachment 121059 [details]
PDF version showing the expected layout

LibreOffice 5.0.4.1 layout incorrect for RTF version of document "Pentutarkistus / Eläinlääkärintodistus" available at http://www.kissaliitto.fi/lomakkeet/rekisterointi

Attached RTF and PDF versions of the same document for comparison. Word "Leima" on the frame at the bottom part of the page left behind of another similar size frame ending up with the empty looking frame. Also the red lined frame supposed to be framing that "Leima" -frame at wrong place on the page.
Comment 1 Ari Latvala 2015-12-06 00:01:59 UTC
Created attachment 121060 [details]
RTF version having problems
Comment 2 Ari Latvala 2015-12-06 00:03:53 UTC
Using LibreOffice 5.4.0.1 on Windows 7 64-bit machine.
Comment 3 Buovjaga 2015-12-06 13:30:44 UTC
Hmm, this is two issues then. Would you mind creating a separate report for the other issue and linking to it here with "bug xxxxx"? I can then confirm it.
You can also adjust the summary for this to refer specifically to a single issue.

Confirmed.

Win 7 Pro 64-bit Version: 5.2.0.0.alpha0+
Build ID: 81fa5340191baf8687f9c82f1f414f5afc86b529
Threads 4; Ver: Windows 6.1; Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-12-03_21:19:19
Locale: fi-FI (fi_FI)

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 4 Ari Latvala 2015-12-06 21:12:27 UTC
Created a new Bug report 96295 for the red lined frame positioning problem, so this is now for the incorrect order of that "Leima" frame and the empty frame covering it.
Comment 5 Buovjaga 2015-12-07 06:33:35 UTC
Ok adjusting summary.. actually I don't know if it is a frame as Format - Frame is greyed out when it is selected. Well, some object anyways.

I will go and confirm bug 96295 now.
Comment 6 Robinson Tryon (qubit) 2015-12-10 01:08:18 UTC Comment hidden (obsolete)
Comment 7 Ari Latvala 2016-03-14 21:18:01 UTC
Seems to be basic shape, not frame
Comment 8 Ari Latvala 2016-03-14 21:19:32 UTC
Still problem on the latest LO 5.1.1.3 for Windows 7 SP1 64-bit and quite a few other problems actually as well on this document.
Comment 9 Miklos Vajna 2016-05-06 21:18:37 UTC
The "frame" shape is anchored inside a table, and the anchor position is incorrect in this case. I'll fix that.
Comment 10 Commit Notification 2016-05-10 10:36:39 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=015fd55c94b7b650ed8e572cafaf3b0f903b01b9

tdf#96275 RTF import: fix anchor of shapes inside tables

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2016-05-18 11:39:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7879b89da30025c8efb812bb31a88f9e382b42a5&h=libreoffice-5-1

tdf#96275 RTF import: fix anchor of shapes inside tables

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.