tdf#96275 RTF import: fix anchor of shapes inside tables

Table text is buffered, so buffer the shape import as well, otherwise
the anchor will precede the buffered text -> incorrect anchor position.

Change-Id: I527b898e2cd5fafaf122a20e11df66ba8d3185cf